@startuml

title __UPDATEINFOACTIVITY's Class Diagram__\n

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateAge {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ inputText : EditText
          ~ onClickListener : OnClickListener
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateEmail {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ inputText : EditText
          ~ onClickListener : OnClickListener
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateGender {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ none : RadioButton
          ~ male : RadioButton
          ~ female : RadioButton
          ~ other : RadioButton
          ~ genderSelectRg : RadioGroup
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          ~ onClickListener : OnClickListener
          ~ gender : OnClickListener
          # onCreate()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateHeight {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ inputText : EditText
          ~ onClickListener : OnClickListener
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateInfoActivity {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ nameText : TextView
          ~ nameLayout : LinearLayout
          ~ genderText : TextView
          ~ genderLayout : LinearLayout
          ~ ageText : TextView
          ~ ageLayout : LinearLayout
          ~ heightText : TextView
          ~ heightLayout : LinearLayout
          ~ weightText : TextView
          ~ weightLayout : LinearLayout
          ~ emailText : TextView
          ~ emailLayout : LinearLayout
          ~ phoneText : TextView
          ~ phoneLayout : LinearLayout
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          - msg : Message
          - handler : Handler
          # onCreate()
          - initUserInfo()
          # onStart()
          # onRestart()
          # onResume()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateName {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ inputText : EditText
          ~ onClickListener : OnClickListener
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdatePhone {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ inputText : EditText
          ~ onClickListener : OnClickListener
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  package com.bupt.colorfulroute {
    package com.bupt.colorfulroute.runningapp.updateInfoActivity {
      class UpdateWeight {
          ~ backButton : ImageView
          ~ titleText : TextView
          ~ rightButton : ImageView
          ~ inputText : EditText
          ~ onClickListener : OnClickListener
          ~ leftLayout : LinearLayout
          ~ rightLayout : LinearLayout
          # onCreate()
      }
    }
  }
  

  UpdateAge -up-|> BaseActivity
  UpdateAge o-- UpdateAge : self
  HostCallbacks -up-|> FragmentHostCallback
  UpdateEmail -up-|> BaseActivity
  UpdateEmail o-- UpdateEmail : self
  HostCallbacks -up-|> FragmentHostCallback
  UpdateGender -up-|> BaseActivity
  UpdateGender o-- UpdateGender : self
  UpdateGender o-- UserInfo : userInfo
  HostCallbacks -up-|> FragmentHostCallback
  UpdateHeight -up-|> BaseActivity
  UpdateHeight o-- UpdateHeight : self
  HostCallbacks -up-|> FragmentHostCallback
  UpdateInfoActivity -up-|> BaseActivity
  UpdateInfoActivity o-- UpdateInfoActivity : self
  UpdateInfoActivity o-- OnMultiClickListener : onMultiClickListener
  UpdateInfoActivity o-- UserInfo : userInfo
  HostCallbacks -up-|> FragmentHostCallback
  UpdateName -up-|> BaseActivity
  UpdateName o-- UpdateName : self
  HostCallbacks -up-|> FragmentHostCallback
  UpdatePhone -up-|> BaseActivity
  UpdatePhone o-- UpdatePhone : self
  UpdatePhone o-- SlideBackLayout : mSlideBackLayout
  HostCallbacks -up-|> FragmentHostCallback
  UpdateWeight -up-|> BaseActivity
  UpdateWeight o-- UpdateWeight : self
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
